Updated after presentation at TreesLab.

--- a/inst/extdata/slides/exploratory_data_analysis/07_SBSR.bib
+++ b/inst/extdata/slides/exploratory_data_analysis/07_SBSR.bib
@@ -1,3 +1,18 @@
+@article{andela2022,
+  title = {Tracking and Classifying {{Amazon}} Fire Events in near Real Time},
+  author = {Andela, Niels and Morton, Douglas C. and Schroeder, Wilfrid and Chen,     Yang and Brando, Paulo M. and Randerson, James T.},
+  month = jul,
+  journal = {Science Advances},
+  volume = {8},
+  number = {30},
+  pages = {eabd2713},
+  issn = {2375-2548},
+  doi = {10.1126/sciadv.abd2713},
+  urldate = {2022-08-02},
+  langid = {english},
+  year = {2022}
+}
+
 @article{armstrong2022,
   title = {Exceeding 1.5\textdegree{{C}} Global Warming Could Trigger Multiple Climate Tipping Points},
   author = {Armstrong McKay, David I. and Staal, Arie and Abrams, Jesse F. and Winkelmann, Ricarda and Sakschewski, Boris and Loriani, Sina and Fetzer, Ingo and Cornell, Sarah E. and Rockstr{\"o}m, Johan and Lenton, Timothy M.},
