--- a/inst/extdata/slides/exploratory_data_analysis/tables/tb_prodes_deter_time_proximity.tex
+++ b/inst/extdata/slides/exploratory_data_analysis/tables/tb_prodes_deter_time_proximity.tex
@@ -4,11 +4,11 @@
 \toprule
 CLASSNAME & closest\_class & total\_ha & n & median\_days & median\_days\_abs & sd\_days & sd\_abs\\
 \midrule
-\cellcolor{gray!6}{P deforestation} & \cellcolor{gray!6}{Cicatriz de queimada} & \cellcolor{gray!6}{1620833.2} & \cellcolor{gray!6}{26272} & \cellcolor{gray!6}{300} & \cellcolor{gray!6}{396} & \cellcolor{gray!6}{687.2} & \cellcolor{gray!6}{496.9}\\
-P forest & Cicatriz de queimada & 1338484.8 & 19411 & 688 & 688 & 516.1 & 515.8\\
-\cellcolor{gray!6}{P deforestation} & \cellcolor{gray!6}{Desmatamento cr} & \cellcolor{gray!6}{1049533.4} & \cellcolor{gray!6}{57922} & \cellcolor{gray!6}{64} & \cellcolor{gray!6}{383} & \cellcolor{gray!6}{731.8} & \cellcolor{gray!6}{504.0}\\
-P forest & Desmatamento cr & 939836.4 & 47172 & 649 & 649 & 488.8 & 488.4\\
-\cellcolor{gray!6}{P deforestation} & \cellcolor{gray!6}{Degradacao} & \cellcolor{gray!6}{391152.0} & \cellcolor{gray!6}{11266} & \cellcolor{gray!6}{353} & \cellcolor{gray!6}{478} & \cellcolor{gray!6}{731.9} & \cellcolor{gray!6}{511.0}\\
+\cellcolor{gray!6}{P deforestation} & \cellcolor{gray!6}{Desmatamento cr} & \cellcolor{gray!6}{2324959.2} & \cellcolor{gray!6}{111688} & \cellcolor{gray!6}{59} & \cellcolor{gray!6}{67} & \cellcolor{gray!6}{190.9} & \cellcolor{gray!6}{179.9}\\
+P forest & Cicatriz de queimada & 2215819.5 & 31574 & 677 & 677 & 514.4 & 514.3\\
+\cellcolor{gray!6}{P forest} & \cellcolor{gray!6}{Degradacao} & \cellcolor{gray!6}{439190.5} & \cellcolor{gray!6}{8739} & \cellcolor{gray!6}{1009} & \cellcolor{gray!6}{1009} & \cellcolor{gray!6}{582.4} & \cellcolor{gray!6}{581.8}\\
+P forest & Cs desordenado & 348185.6 & 2419 & 446 & 446 & 569.1 & 568.7\\
+\cellcolor{gray!6}{P forest} & \cellcolor{gray!6}{Cs geometrico} & \cellcolor{gray!6}{285442.5} & \cellcolor{gray!6}{2953} & \cellcolor{gray!6}{376} & \cellcolor{gray!6}{376} & \cellcolor{gray!6}{461.8} & \cellcolor{gray!6}{461.6}\\
 \bottomrule
 \end{longtabu}
 \endgroup{}
