--- a/inst/extdata/slides/exploratory_data_analysis/eda.tex
+++ b/inst/extdata/slides/exploratory_data_analysis/eda.tex
@@ -502,10 +502,33 @@ Brazilian Amazon}
 \begin{frame}
     \frametitle{Fire spots by month}
     \begin{figure}[h] 
-    \includegraphics[width=0.65\textwidth]
-        {./figures/plot_fire_spots_by_month.png}
+        \includegraphics[width=0.65\textwidth] 
+        {./figures/plot_fire_spots_by_month.png} 
+        \caption{Aug (2019) \& Sep (2017) top fire spots. 
+        Note 2015's last trimester.}
     \end{figure}
 \end{frame}
+
+\begin{frame}
+    \frametitle{Fire spots by month and state}
+    \begin{figure}[h]
+        \includegraphics[width=0.65\textwidth]
+        {./figures/plot_fire_spots_by_month_state.png}
+        \caption{Note the incresing trend in Amazonas and its move towards
+        August.}
+    \end{figure}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Fire spots density (by area overlap with BLA)}
+    \begin{figure}[h]
+        \includegraphics[width=0.65\textwidth]
+        {./figures/plot_fire_spots_density_by_state.png}
+        \caption{Number of fire spots by state and their density (by 
+        area in BLA).}
+    \end{figure}
+\end{frame}
+
 
 \begin{frame}
     \frametitle{Current analysis venue}
